<resources>
    <string name="app_name">QQDemoV1</string>
    <string name="hint_QQName">输入QQ号</string>
    <string name="hint_QQPwd">输入QQ密码</string>
    <string name="btn_Login">登录</string>
    <string name="chk_RememberPwd">记住密码</string>
    <string name="tv_ForgetPwd">忘记密码</string>
    <string name="tv_RegustQQ">注册</string>
    <string name="title_ForgetPwd">忘记密码</string>
    <string name="hint_PhoneNum">输入手机号码</string>
    <string name="hint_NewPwd">输入新密码</string>
    <string name="btn_GetValidNum">获取验证码</string>
    <string name="tv_ValidNum">验证码:</string>
    <string name="btn_ResetPwd">重置密码</string>
    <string name="tv_RegisterQQ">QQ注册</string>
    <string name="tv_QQNum">QQ号:</string>
    <string name="tv_Password">密码:</string>
    <string name="tv_Email">邮箱:</string>
    <string name="tv_Sex">性别:</string>
    <string name="hint_InputQQNum">输入QQ号码</string>
    <string name="hint_InputPassword">输入QQ密码</string>
    <string name="hint_InputEmail">输入Email</string>
    <string name="btn_RegisterQQ">注册</string>
    <string name="title_Message">消息</string>
    <string name="tv_BtnAdd">添加</string>
    <string name="title_Contact">联系人</string>
    <string name="menuitem_about">关于</string>
    <string name="menuitem_exit">退出</string>
    <string name="dialog_about_title">关于</string>
    <string name="dialog_about_message">0ODemo V2,0</string>
    <string name="dialog_btn_yes">是</string>
    <string name="dialog_btn_no">否</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_exit_title">确认</string>
    <string name="dialog_exit_message">是否要退出应用? </string>
    <string name="menuitem_gotop">置顶</string>
    <string name="menuitem_delete">删除</string>
    <string name="title_dongtai">动态</string>
</resources>
